# Cinlink

./: .gitignore  README.md  install.md  pyproject.toml  skills-manifest.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
docs/: SERVER_CHANGE_REQUESTS_CN.md  USAGE_CN.md
examples/: mcp-config.json
scripts/: install_windows.ps1
skills/: call_cinlink_tool.py  call_popularvideo_tool.py
skills/cinlink/: SKILL.md
skills/cinlink-agent/: SKILL.md
skills/cinlink-cli/: SKILL.md
skills/cinlink-cli/references/: tool-contract.md
skills/cinlink-cli/scripts/: cinlink_tool.py
skills/cinlink-dubbing/: SKILL.md
skills/cinlink-generation/: SKILL.md
skills/cinlink-subtitles/: SKILL.md
skills/cinlink-understanding/: SKILL.md
skills/hermes/: cinlink_tools.yaml  popularvideo_tools.yaml
skills/openclaw/: cinlink.skill.json  popularvideo.skill.json
src/popularvideo_cli/: cli.py  client.py  config.py  dependencies.py  errors.py  local_setup.py  local_tools.py  mcp.py  schemas.py  workflows.py
