[project]
name = "cinlink-cli"
version = "0.1.0"
description = "Standalone CinLink CLI and agent tool protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
]

[project.scripts]
cinlink = "popularvideo_cli.cli:main"
cinlink-mcp = "popularvideo_cli.mcp:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
